# mlops-experiment-tracker

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
backend/: Dockerfile
backend/app/: __init__.py  config.py  extensions.py
backend/app/api/: alerts.py  artifacts.py  experiments.py  gpu_nodes.py  health.py  metrics.py  runs.py  tags.py
backend/app/middleware/: auth.py  logging.py
backend/app/models/: __init__.py  alert.py  artifact.py  experiment.py  gpu_node.py  metric.py  run.py  tag.py
backend/app/schemas/: __init__.py  artifact.py  experiment.py  metric.py  run.py
backend/app/services/: __init__.py  artifact_service.py  experiment_service.py  gpu_scheduler.py  metric_service.py  run_service.py
backend/app/tasks/: metric_aggregator.py
backend/migrations/versions/: 0001_initial_schema.py  0002_add_tags_alerts_artifact_upload.py
backend/tests/: conftest.py
backend/tests/integration/: test_experiments_api.py  test_metrics_api.py  test_runs_api.py
backend/tests/unit/: test_experiment_service.py  test_metric_service.py  test_run_service.py
docs/: api_reference.md  architecture.md  deployment.md
frontend/: Dockerfile  index.html  package.json  vite.config.ts
frontend/src/: App.tsx
jenkins/: Jenkinsfile
k8s/: backend-deployment.yaml  backend-service.yaml  configmap.yaml  frontend-deployment.yaml  frontend-service.yaml  ingress.yaml  namespace.yaml  postgres-statefulset.yaml  redis-deployment.yaml
scripts/: seed_experiments.py  seed_metrics.py  seed_runs.py
(+29 files in other folders)
